[gd_scene load_steps=4 format=3 uid="uid://cmbmxbychxpbp"]

[ext_resource type="PackedScene" uid="uid://2e67u6fu1ieh" path="res://addons/admob/src/core/components/ad_format/AdFormat.tscn" id="1"]
[ext_resource type="Script" path="res://addons/admob/src/core/components/ad_format/BannerAdFormat.gd" id="2"]
[ext_resource type="Script" path="res://addons/admob/src/core/components/ad_format/RespectSafeArea.gd" id="3"]

[node name="BannerAdFormat" instance=ExtResource("1")]
script = ExtResource("2")

[node name="BannerSizeHBoxContainer" type="HBoxContainer" parent="." index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="BannerSizeHBoxContainer" index="0"]
layout_mode = 2
text = "Banner Size"

[node name="BannerSize" type="OptionButton" parent="BannerSizeHBoxContainer" index="1"]
layout_mode = 2

[node name="RespectSafeArea" type="CheckBox" parent="." index="1"]
layout_mode = 2
text = "Respect Safe Area3D (RECOMMEND TRUE)"
script = ExtResource("3")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="RespectSafeArea" index="0"]
dialog_text = "IT'S NOT RECOMMENDED LEAVE THIS AS FALSE

According to Google AdMob documentation for iOS: Banner ads must be placed in the \"Safe Area3D\" to avoid being obscured by rounded corners, sensor housing, and the Home indicator. 

Read here: https://developers.google.com/admob/ios/x-ad-rendering"
dialog_autowrap = true

[node name="BannerShowInstantly" type="CheckBox" parent="." index="2"]
layout_mode = 2
text = "Show Banner Instantly"

[node name="BannerOnTop" type="CheckBox" parent="." index="3"]
layout_mode = 2
text = "Banner On Top"

[node name="UnitIds" parent="." index="4"]
layout_mode = 2

[connection signal="item_selected" from="BannerSizeHBoxContainer/BannerSize" to="." method="_on_BannerSize_item_selected"]
[connection signal="pressed" from="RespectSafeArea" to="RespectSafeArea" method="_on_RespectSafeArea_pressed"]
[connection signal="confirmed" from="RespectSafeArea/ConfirmationDialog" to="RespectSafeArea" method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="BannerShowInstantly" to="." method="_on_BannerShowInstantly_pressed"]
[connection signal="pressed" from="BannerOnTop" to="." method="_on_BannerOnTop_pressed"]
